lots of formatting changes

--- a/1 - Simple Sentiment Analysis.ipynb
+++ b/1 - Simple Sentiment Analysis.ipynb
@@ -61,8 +61,8 @@
     "torch.cuda.manual_seed(SEED)\n",
     "torch.backends.cudnn.deterministic = True\n",
     "\n",
-    "TEXT = data.Field(tokenize='spacy')\n",
-    "LABEL = data.LabelField(dtype=torch.float)"
+    "TEXT = data.Field(tokenize = 'spacy')\n",
+    "LABEL = data.LabelField(dtype = torch.float)"
    ]
   },
   {
@@ -154,7 +154,7 @@
    "source": [
     "import random\n",
     "\n",
-    "train_data, valid_data = train_data.split(random_state=random.seed(SEED))"
+    "train_data, valid_data = train_data.split(random_state = random.seed(SEED))"
    ]
   },
   {
@@ -210,7 +210,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TEXT.build_vocab(train_data, max_size=25000)\n",
+    "MAX_VOCAB_SIZE = 25_000\n",
+    "\n",
+    "TEXT.build_vocab(train_data, max_size = MAX_VOCAB_SIZE)\n",
     "LABEL.build_vocab(train_data)"
    ]
   },
@@ -341,8 +343,8 @@
     "\n",
     "train_iterator, valid_iterator, test_iterator = data.BucketIterator.splits(\n",
     "    (train_data, valid_data, test_data), \n",
-    "    batch_size=BATCH_SIZE,\n",
-    "    device=device)"
+    "    batch_size = BATCH_SIZE,\n",
+    "    device = device)"
    ]
   },
   {
@@ -390,10 +392,13 @@
     "\n",
     "class RNN(nn.Module):\n",
     "    def __init__(self, input_dim, embedding_dim, hidden_dim, output_dim):\n",
+    "        \n",
     "        super().__init__()\n",
     "        \n",
     "        self.embedding = nn.Embedding(input_dim, embedding_dim)\n",
+    "        \n",
     "        self.rnn = nn.RNN(embedding_dim, hidden_dim)\n",
+    "        \n",
     "        self.fc = nn.Linear(hidden_dim, output_dim)\n",
     "        \n",
     "    def forward(self, text):\n",
@@ -563,7 +568,7 @@
     "    #round predictions to the closest integer\n",
     "    rounded_preds = torch.round(torch.sigmoid(preds))\n",
     "    correct = (rounded_preds == y).float() #convert into float for division \n",
-    "    acc = correct.sum()/len(correct)\n",
+    "    acc = correct.sum() / len(correct)\n",
     "    return acc"
    ]
   },
