--- a/2 - Upgraded Sentiment Analysis.ipynb
+++ b/2 - Upgraded Sentiment Analysis.ipynb
@@ -45,12 +45,12 @@
     "torch.cuda.manual_seed(SEED)\n",
     "torch.backends.cudnn.deterministic = True\n",
     "\n",
-    "TEXT = data.Field(tokenize='spacy')\n",
-    "LABEL = data.LabelField(dtype=torch.float)\n",
+    "TEXT = data.Field(tokenize = 'spacy')\n",
+    "LABEL = data.LabelField(dtype = torch.float)\n",
     "\n",
     "train_data, test_data = datasets.IMDB.splits(TEXT, LABEL)\n",
     "\n",
-    "train_data, valid_data = train_data.split(random_state=random.seed(SEED))"
+    "train_data, valid_data = train_data.split(random_state = random.seed(SEED))"
    ]
   },
   {
@@ -77,7 +77,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TEXT.build_vocab(train_data, max_size=25000, vectors=\"glove.6B.100d\", unk_init=torch.Tensor.normal_)\n",
+    "MAX_VOCAB_SIZE = 25_000\n",
+    "\n",
+    "TEXT.build_vocab(train_data, \n",
+    "                 max_size = MAX_VOCAB_SIZE, \n",
+    "                 vectors = \"glove.6B.100d\", \n",
+    "                 unk_init = torch.Tensor.normal_)\n",
+    "\n",
     "LABEL.build_vocab(train_data)"
    ]
   },
@@ -100,8 +106,8 @@
     "\n",
     "train_iterator, valid_iterator, test_iterator = data.BucketIterator.splits(\n",
     "    (train_data, valid_data, test_data), \n",
-    "    batch_size=BATCH_SIZE, \n",
-    "    device=device)"
+    "    batch_size = BATCH_SIZE, \n",
+    "    device = device)"
    ]
   },
   {
@@ -172,14 +178,21 @@
     "import torch.nn as nn\n",
     "\n",
     "class RNN(nn.Module):\n",
-    "    def __init__(self, vocab_size, embedding_dim, hidden_dim, output_dim, \n",
-    "                 n_layers, bidirectional, dropout, pad_idx):\n",
+    "    def __init__(self, vocab_size, embedding_dim, hidden_dim, output_dim, n_layers, \n",
+    "                 bidirectional, dropout, pad_idx):\n",
+    "        \n",
     "        super().__init__()\n",
     "        \n",
-    "        self.embedding = nn.Embedding(vocab_size, embedding_dim, padding_idx=pad_idx)\n",
-    "        self.rnn = nn.LSTM(embedding_dim, hidden_dim, num_layers=n_layers, \n",
-    "                           bidirectional=bidirectional, dropout=dropout)\n",
-    "        self.fc = nn.Linear(hidden_dim*2, output_dim)\n",
+    "        self.embedding = nn.Embedding(vocab_size, embedding_dim, padding_idx = pad_idx)\n",
+    "        \n",
+    "        self.rnn = nn.LSTM(embedding_dim, \n",
+    "                           hidden_dim, \n",
+    "                           num_layers=n_layers, \n",
+    "                           bidirectional=bidirectional, \n",
+    "                           dropout=dropout)\n",
+    "        \n",
+    "        self.fc = nn.Linear(hidden_dim * 2, output_dim)\n",
+    "        \n",
     "        self.dropout = nn.Dropout(dropout)\n",
     "        \n",
     "    def forward(self, text):\n",
@@ -199,7 +212,7 @@
     "        #concat the final forward (hidden[-2,:,:]) and backward (hidden[-1,:,:]) hidden layers\n",
     "        #and apply dropout\n",
     "        \n",
-    "        hidden = self.dropout(torch.cat((hidden[-2,:,:], hidden[-1,:,:]), dim=1))\n",
+    "        hidden = self.dropout(torch.cat((hidden[-2,:,:], hidden[-1,:,:]), dim = 1))\n",
     "                \n",
     "        #hidden = [batch size, hid dim * num directions]\n",
     "            \n",
@@ -232,8 +245,14 @@
     "DROPOUT = 0.5\n",
     "PAD_IDX = TEXT.vocab.stoi[TEXT.pad_token]\n",
     "\n",
-    "model = RNN(INPUT_DIM, EMBEDDING_DIM, HIDDEN_DIM, OUTPUT_DIM, \n",
-    "            N_LAYERS, BIDIRECTIONAL, DROPOUT, PAD_IDX)"
+    "model = RNN(INPUT_DIM, \n",
+    "            EMBEDDING_DIM, \n",
+    "            HIDDEN_DIM, \n",
+    "            OUTPUT_DIM, \n",
+    "            N_LAYERS, \n",
+    "            BIDIRECTIONAL, \n",
+    "            DROPOUT, \n",
+    "            PAD_IDX)"
    ]
   },
   {
@@ -441,7 +460,7 @@
     "    #round predictions to the closest integer\n",
     "    rounded_preds = torch.round(torch.sigmoid(preds))\n",
     "    correct = (rounded_preds == y).float() #convert into float for division \n",
-    "    acc = correct.sum()/len(correct)\n",
+    "    acc = correct.sum() / len(correct)\n",
     "    return acc"
    ]
   },
