--- a/3 - Faster Sentiment Analysis.ipynb
+++ b/3 - Faster Sentiment Analysis.ipynb
@@ -85,8 +85,8 @@
     "torch.cuda.manual_seed(SEED)\n",
     "torch.backends.cudnn.deterministic = True\n",
     "\n",
-    "TEXT = data.Field(tokenize='spacy', preprocessing=generate_bigrams)\n",
-    "LABEL = data.LabelField(dtype=torch.float)"
+    "TEXT = data.Field(tokenize = 'spacy', preprocessing = generate_bigrams)\n",
+    "LABEL = data.LabelField(dtype = torch.float)"
    ]
   },
   {
@@ -106,7 +106,7 @@
     "\n",
     "train_data, test_data = datasets.IMDB.splits(TEXT, LABEL)\n",
     "\n",
-    "train_data, valid_data = train_data.split(random_state=random.seed(SEED))"
+    "train_data, valid_data = train_data.split(random_state = random.seed(SEED))"
    ]
   },
   {
@@ -122,7 +122,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TEXT.build_vocab(train_data, max_size=25000, vectors=\"glove.6B.100d\", unk_init=torch.Tensor.normal_)\n",
+    "MAX_VOCAB_SIZE = 25_000\n",
+    "\n",
+    "TEXT.build_vocab(train_data, \n",
+    "                 max_size = MAX_VOCAB_SIZE, \n",
+    "                 vectors = \"glove.6B.100d\", \n",
+    "                 unk_init = torch.Tensor.normal_)\n",
+    "\n",
     "LABEL.build_vocab(train_data)"
    ]
   },
@@ -145,8 +151,8 @@
     "\n",
     "train_iterator, valid_iterator, test_iterator = data.BucketIterator.splits(\n",
     "    (train_data, valid_data, test_data), \n",
-    "    batch_size=BATCH_SIZE, \n",
-    "    device=device)"
+    "    batch_size = BATCH_SIZE, \n",
+    "    device = device)"
    ]
   },
   {
@@ -187,9 +193,11 @@
     "\n",
     "class FastText(nn.Module):\n",
     "    def __init__(self, vocab_size, embedding_dim, output_dim, pad_idx):\n",
+    "        \n",
     "        super().__init__()\n",
     "        \n",
     "        self.embedding = nn.Embedding(vocab_size, embedding_dim, padding_idx=pad_idx)\n",
+    "        \n",
     "        self.fc = nn.Linear(embedding_dim, output_dim)\n",
     "        \n",
     "    def forward(self, text):\n",
@@ -380,7 +388,7 @@
     "    #round predictions to the closest integer\n",
     "    rounded_preds = torch.round(torch.sigmoid(preds))\n",
     "    correct = (rounded_preds == y).float() #convert into float for division \n",
-    "    acc = correct.sum()/len(correct)\n",
+    "    acc = correct.sum() / len(correct)\n",
     "    return acc"
    ]
   },
