--- a/4 - Convolutional Sentiment Analysis.ipynb
+++ b/4 - Convolutional Sentiment Analysis.ipynb
@@ -47,12 +47,12 @@
     "torch.cuda.manual_seed(SEED)\n",
     "torch.backends.cudnn.deterministic = True\n",
     "\n",
-    "TEXT = data.Field(tokenize='spacy')\n",
-    "LABEL = data.LabelField(dtype=torch.float)\n",
+    "TEXT = data.Field(tokenize = 'spacy')\n",
+    "LABEL = data.LabelField(dtype = torch.float)\n",
     "\n",
     "train_data, test_data = datasets.IMDB.splits(TEXT, LABEL)\n",
     "\n",
-    "train_data, valid_data = train_data.split(random_state=random.seed(SEED))"
+    "train_data, valid_data = train_data.split(random_state = random.seed(SEED))"
    ]
   },
   {
@@ -70,8 +70,10 @@
    "source": [
     "MAX_VOCAB_SIZE = 25_000\n",
     "\n",
-    "TEXT.build_vocab(train_data, max_size=MAX_VOCAB_SIZE, \n",
-    "                 vectors=\"glove.6B.100d\", unk_init=torch.Tensor.normal_)\n",
+    "TEXT.build_vocab(train_data, \n",
+    "                 max_size = MAX_VOCAB_SIZE, \n",
+    "                 vectors = \"glove.6B.100d\", \n",
+    "                 unk_init = torch.Tensor.normal_)\n",
     "\n",
     "LABEL.build_vocab(train_data)"
    ]
@@ -95,8 +97,8 @@
     "\n",
     "train_iterator, valid_iterator, test_iterator = data.BucketIterator.splits(\n",
     "    (train_data, valid_data, test_data), \n",
-    "    batch_size=BATCH_SIZE, \n",
-    "    device=device)"
+    "    batch_size = BATCH_SIZE, \n",
+    "    device = device)"
    ]
   },
   {
@@ -158,18 +160,27 @@
     "import torch.nn.functional as F\n",
     "\n",
     "class CNN(nn.Module):\n",
-    "    def __init__(self, vocab_size, embedding_dim, n_filters, \n",
-    "                 filter_sizes, output_dim, dropout, pad_idx):\n",
+    "    def __init__(self, vocab_size, embedding_dim, n_filters, filter_sizes, output_dim, \n",
+    "                 dropout, pad_idx):\n",
+    "        \n",
     "        super().__init__()\n",
     "        \n",
     "        self.embedding = nn.Embedding(vocab_size, embedding_dim, padding_idx = pad_idx)\n",
-    "        self.conv_0 = nn.Conv2d(in_channels = 1, out_channels = n_filters, \n",
+    "        \n",
+    "        self.conv_0 = nn.Conv2d(in_channels = 1, \n",
+    "                                out_channels = n_filters, \n",
     "                                kernel_size = (filter_sizes[0], embedding_dim))\n",
-    "        self.conv_1 = nn.Conv2d(in_channels = 1, out_channels = n_filters, \n",
+    "        \n",
+    "        self.conv_1 = nn.Conv2d(in_channels = 1, \n",
+    "                                out_channels = n_filters, \n",
     "                                kernel_size = (filter_sizes[1], embedding_dim))\n",
-    "        self.conv_2 = nn.Conv2d(in_channels = 1, out_channels = n_filters, \n",
+    "        \n",
+    "        self.conv_2 = nn.Conv2d(in_channels = 1, \n",
+    "                                out_channels = n_filters, \n",
     "                                kernel_size = (filter_sizes[2], embedding_dim))\n",
+    "        \n",
     "        self.fc = nn.Linear(len(filter_sizes) * n_filters, output_dim)\n",
+    "        \n",
     "        self.dropout = nn.Dropout(dropout)\n",
     "        \n",
     "    def forward(self, text):\n",
@@ -200,7 +211,7 @@
     "        \n",
     "        #pooled_n = [batch size, n_filters]\n",
     "        \n",
-    "        cat = self.dropout(torch.cat((pooled_0, pooled_1, pooled_2), dim=1))\n",
+    "        cat = self.dropout(torch.cat((pooled_0, pooled_1, pooled_2), dim = 1))\n",
     "\n",
     "        #cat = [batch size, n_filters * len(filter_sizes)]\n",
     "            \n",
@@ -225,17 +236,22 @@
    "outputs": [],
    "source": [
     "class CNN(nn.Module):\n",
-    "    def __init__(self, vocab_size, embedding_dim, n_filters, \n",
-    "                 filter_sizes, output_dim, dropout, pad_idx):\n",
+    "    def __init__(self, vocab_size, embedding_dim, n_filters, filter_sizes, output_dim, \n",
+    "                 dropout, pad_idx):\n",
+    "        \n",
     "        super().__init__()\n",
     "        \n",
     "        self.embedding = nn.Embedding(vocab_size, embedding_dim, padding_idx = pad_idx)\n",
+    "        \n",
     "        self.convs = nn.ModuleList([\n",
-    "                                    nn.Conv2d(in_channels = 1, out_channels = n_filters, \n",
+    "                                    nn.Conv2d(in_channels = 1, \n",
+    "                                              out_channels = n_filters, \n",
     "                                              kernel_size = (fs, embedding_dim)) \n",
     "                                    for fs in filter_sizes\n",
     "                                    ])\n",
+    "        \n",
     "        self.fc = nn.Linear(len(filter_sizes) * n_filters, output_dim)\n",
+    "        \n",
     "        self.dropout = nn.Dropout(dropout)\n",
     "        \n",
     "    def forward(self, text):\n",
@@ -262,7 +278,7 @@
     "        \n",
     "        #pooled_n = [batch size, n_filters]\n",
     "        \n",
-    "        cat = self.dropout(torch.cat(pooled, dim=1))\n",
+    "        cat = self.dropout(torch.cat(pooled, dim = 1))\n",
     "\n",
     "        #cat = [batch size, n_filters * len(filter_sizes)]\n",
     "            \n",
@@ -285,18 +301,22 @@
    "outputs": [],
    "source": [
     "class CNN1d(nn.Module):\n",
-    "    def __init__(self, vocab_size, embedding_dim, n_filters, \n",
-    "                 filter_sizes, output_dim, dropout, pad_idx):\n",
+    "    def __init__(self, vocab_size, embedding_dim, n_filters, filter_sizes, output_dim, \n",
+    "                 dropout, pad_idx):\n",
+    "        \n",
     "        super().__init__()\n",
     "        \n",
     "        self.embedding = nn.Embedding(vocab_size, embedding_dim, padding_idx = pad_idx)\n",
+    "        \n",
     "        self.convs = nn.ModuleList([\n",
     "                                    nn.Conv1d(in_channels = embedding_dim, \n",
     "                                              out_channels = n_filters, \n",
     "                                              kernel_size = fs)\n",
     "                                    for fs in filter_sizes\n",
     "                                    ])\n",
+    "        \n",
     "        self.fc = nn.Linear(len(filter_sizes) * n_filters, output_dim)\n",
+    "        \n",
     "        self.dropout = nn.Dropout(dropout)\n",
     "        \n",
     "    def forward(self, text):\n",
@@ -323,7 +343,7 @@
     "        \n",
     "        #pooled_n = [batch size, n_filters]\n",
     "        \n",
-    "        cat = self.dropout(torch.cat(pooled, dim=1))\n",
+    "        cat = self.dropout(torch.cat(pooled, dim = 1))\n",
     "        \n",
     "        #cat = [batch size, n_filters * len(filter_sizes)]\n",
     "            \n",
@@ -491,7 +511,7 @@
     "    #round predictions to the closest integer\n",
     "    rounded_preds = torch.round(torch.sigmoid(preds))\n",
     "    correct = (rounded_preds == y).float() #convert into float for division \n",
-    "    acc = correct.sum()/len(correct)\n",
+    "    acc = correct.sum() / len(correct)\n",
     "    return acc"
    ]
   },
@@ -706,7 +726,7 @@
     "import spacy\n",
     "nlp = spacy.load('en')\n",
     "\n",
-    "def predict_sentiment(sentence, min_len=5):\n",
+    "def predict_sentiment(sentence, min_len = 5):\n",
     "    tokenized = [tok.text for tok in nlp.tokenizer(sentence)]\n",
     "    if len(tokenized) < min_len:\n",
     "        tokenized += ['<pad>'] * (min_len - len(tokenized))\n",
