--- a/5 - Multi-class Sentiment Analysis.ipynb
+++ b/5 - Multi-class Sentiment Analysis.ipynb
@@ -34,12 +34,12 @@
     "torch.cuda.manual_seed(SEED)\n",
     "torch.backends.cudnn.deterministic = True\n",
     "\n",
-    "TEXT = data.Field(tokenize='spacy')\n",
+    "TEXT = data.Field(tokenize = 'spacy')\n",
     "LABEL = data.LabelField()\n",
     "\n",
     "train_data, test_data = datasets.TREC.splits(TEXT, LABEL, fine_grained=False)\n",
     "\n",
-    "train_data, valid_data = train_data.split(random_state=random.seed(SEED))"
+    "train_data, valid_data = train_data.split(random_state = random.seed(SEED))"
    ]
   },
   {
@@ -82,7 +82,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TEXT.build_vocab(train_data, vectors=\"glove.6B.100d\", unk_init=torch.Tensor.normal_)\n",
+    "MAX_VOCAB_SIZE = 25_000\n",
+    "\n",
+    "TEXT.build_vocab(train_data, \n",
+    "                 max_size = MAX_VOCAB_SIZE, \n",
+    "                 vectors = \"glove.6B.100d\", \n",
+    "                 unk_init = torch.Tensor.normal_)\n",
+    "\n",
     "LABEL.build_vocab(train_data)"
    ]
   },
@@ -137,8 +143,8 @@
     "\n",
     "train_iterator, valid_iterator, test_iterator = data.BucketIterator.splits(\n",
     "    (train_data, valid_data, test_data), \n",
-    "    batch_size=BATCH_SIZE, \n",
-    "    device=device)"
+    "    batch_size = BATCH_SIZE, \n",
+    "    device = device)"
    ]
   },
   {
@@ -158,17 +164,22 @@
     "import torch.nn.functional as F\n",
     "\n",
     "class CNN(nn.Module):\n",
-    "    def __init__(self, vocab_size, embedding_dim, n_filters, \n",
-    "                 filter_sizes, output_dim, dropout, pad_idx):\n",
+    "    def __init__(self, vocab_size, embedding_dim, n_filters, filter_sizes, output_dim, \n",
+    "                 dropout, pad_idx):\n",
+    "        \n",
     "        super().__init__()\n",
     "        \n",
     "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
+    "        \n",
     "        self.convs = nn.ModuleList([\n",
-    "                                    nn.Conv2d(in_channels = 1, out_channels = n_filters, \n",
+    "                                    nn.Conv2d(in_channels = 1, \n",
+    "                                              out_channels = n_filters, \n",
     "                                              kernel_size = (fs, embedding_dim)) \n",
     "                                    for fs in filter_sizes\n",
     "                                    ])\n",
+    "        \n",
     "        self.fc = nn.Linear(len(filter_sizes) * n_filters, output_dim)\n",
+    "        \n",
     "        self.dropout = nn.Dropout(dropout)\n",
     "        \n",
     "    def forward(self, text):\n",
@@ -195,7 +206,7 @@
     "        \n",
     "        #pooled_n = [batch size, n_filters]\n",
     "        \n",
-    "        cat = self.dropout(torch.cat(pooled, dim=1))\n",
+    "        cat = self.dropout(torch.cat(pooled, dim = 1))\n",
     "\n",
     "        #cat = [batch size, n_filters * len(filter_sizes)]\n",
     "            \n",
@@ -357,9 +368,9 @@
     "    \"\"\"\n",
     "    Returns accuracy per batch, i.e. if you get 8/10 right, this returns 0.8, NOT 8\n",
     "    \"\"\"\n",
-    "    max_preds = preds.argmax(dim=1, keepdim=True) # get the index of the max probability\n",
+    "    max_preds = preds.argmax(dim = 1, keepdim = True) # get the index of the max probability\n",
     "    correct = max_preds.squeeze(1).eq(y)\n",
-    "    return correct.sum()/torch.FloatTensor([y.shape[0]])"
+    "    return correct.sum() / torch.FloatTensor([y.shape[0]])"
    ]
   },
   {
@@ -562,7 +573,7 @@
     "import spacy\n",
     "nlp = spacy.load('en')\n",
     "\n",
-    "def predict_class(sentence, min_len=4):\n",
+    "def predict_class(sentence, min_len = 4):\n",
     "    tokenized = [tok.text for tok in nlp.tokenizer(sentence)]\n",
     "    if len(tokenized) < min_len:\n",
     "        tokenized += ['<pad>'] * (min_len - len(tokenized))\n",
@@ -570,7 +581,7 @@
     "    tensor = torch.LongTensor(indexed).to(device)\n",
     "    tensor = tensor.unsqueeze(1)\n",
     "    preds = model(tensor)\n",
-    "    max_preds = preds.argmax(dim=1)\n",
+    "    max_preds = preds.argmax(dim = 1)\n",
     "    return max_preds.item()"
    ]
   },
