mentioned how notebook 2 will introduce packed padded sequences

--- a/1 - Simple Sentiment Analysis.ipynb
+++ b/1 - Simple Sentiment Analysis.ipynb
@@ -790,14 +790,15 @@
     "## Next Steps\n",
     "\n",
     "In the next notebook, the improvements we will make are:\n",
-    "- different optimizer\n",
-    "- use pre-trained word embeddings\n",
+    "- packed padded sequences\n",
+    "- pre-trained word embeddings\n",
     "- different RNN architecture\n",
     "- bidirectional RNN\n",
     "- multi-layer RNN\n",
     "- regularization\n",
+    "- a different optimizer\n",
     "\n",
-    "This will allow us to achieve ~85% accuracy."
+    "This will allow us to achieve ~84% accuracy."
    ]
   }
  ],
