added packed padded sequences to notebook 2

--- a/2 - Upgraded Sentiment Analysis.ipynb
+++ b/2 - Upgraded Sentiment Analysis.ipynb
@@ -9,6 +9,7 @@
     "In the previous notebook, we got the fundamentals down for sentiment analysis. In this notebook, we'll actually get decent results.\n",
     "\n",
     "We will use:\n",
+    "- packed padded sequences\n",
     "- pre-trained word embeddings\n",
     "- different RNN architecture\n",
     "- bidirectional RNN\n",
@@ -16,7 +17,7 @@
     "- regularization\n",
     "- a different optimizer\n",
     "\n",
-    "This will allow us to achieve ~85% test accuracy."
+    "This will allow us to achieve ~84% test accuracy."
    ]
   },
   {
@@ -25,7 +26,9 @@
    "source": [
     "## Preparing Data\n",
     "\n",
-    "The same as before, we'll set the seed, define the `Fields` and get the train/valid/test splits."
+    "As before, we'll set the seed, define the `Fields` and get the train/valid/test splits.\n",
+    "\n",
+    "We'll be using *packed padded sequences*, which will make our RNN only process the non-padded elements of our sequence, and for any padded element the `output` will be a zero tensor. To use packed padded sequences, we have to tell the RNN how long the actual sequences are. We do this by setting `include_lengths = True` for our `TEXT` field. This will cause `batch.text` to now be a tuple with the first element being our sentence (a numericalized tensor that has been padded) and the second element being the actual lengths of our sentences."
    ]
   },
   {
@@ -37,7 +40,7 @@
     "import torch\n",
     "from torchtext import data\n",
     "from torchtext import datasets\n",
-    "import random\n",
+    "\n",
     "\n",
     "SEED = 1234\n",
     "\n",
@@ -45,10 +48,42 @@
     "torch.cuda.manual_seed(SEED)\n",
     "torch.backends.cudnn.deterministic = True\n",
     "\n",
-    "TEXT = data.Field(tokenize = 'spacy')\n",
-    "LABEL = data.LabelField(dtype = torch.float)\n",
+    "TEXT = data.Field(tokenize = 'spacy', include_lengths = True)\n",
+    "LABEL = data.LabelField(dtype = torch.float)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then load the IMDb dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torchtext import datasets\n",
     "\n",
-    "train_data, test_data = datasets.IMDB.splits(TEXT, LABEL)\n",
+    "train_data, test_data = datasets.IMDB.splits(TEXT, LABEL)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then create the validation set from our training set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
     "\n",
     "train_data, valid_data = train_data.split(random_state = random.seed(SEED))"
    ]
@@ -57,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first addition is the use of pre-trained word embeddings. Now, instead of having our word embeddings initialized randomly, they are initialized with these pre-trained vectors.\n",
+    "Next is the use of pre-trained word embeddings. Now, instead of having our word embeddings initialized randomly, they are initialized with these pre-trained vectors.\n",
     "We get these vectors simply by specifying which vectors we want and passing it as an argument to `build_vocab`. `TorchText` handles downloading the vectors and associating them with the correct words in our vocabulary.\n",
     "\n",
     "Here, we'll be using the `\"glove.6B.100d\" vectors\"`. `glove` is the algorithm used to calculate the vectors, go [here](https://nlp.stanford.edu/projects/glove/) for more. `6B` indicates these vectors were trained on 6 billion tokens and `100d` indicates these vectors are 100-dimensional.\n",
@@ -73,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,12 +126,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As before, we create the iterators, placing the tensors on the GPU if one is available."
+    "As before, we create the iterators, placing the tensors on the GPU if one is available.\n",
+    "\n",
+    "Another thing for packed padded sequences all of the tensors within a batch need to be sorted by their lengths. This is handled in the iterator by setting `sort_within_batch = True`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +143,8 @@
     "\n",
     "train_iterator, valid_iterator, test_iterator = data.BucketIterator.splits(\n",
     "    (train_data, valid_data, test_data), \n",
-    "    batch_size = BATCH_SIZE, \n",
+    "    batch_size = BATCH_SIZE,\n",
+    "    sort_within_batch = True,\n",
     "    device = device)"
    ]
   },
@@ -166,12 +204,18 @@
     "\n",
     "Dropout is implemented by initializing an `nn.Dropout` layer (the argument is the probability of dropping out each neuron) and using it within the `forward` method after each layer we want to apply dropout to. **Note**: never use dropout on the input or output layers (`text` or `fc` in this case), you only ever want to use dropout on intermediate layers. The LSTM has a `dropout` argument which adds dropout on the connections between hidden states in one layer to hidden states in the next layer. \n",
     "\n",
+    "As we are passing the lengths of our sentences to be able to use packed padded sequences, we have to add a second argument, `text_lengths`, to `forward`. \n",
+    "\n",
+    "Before we pass our embeddings to the RNN, we need to pack them, which we do with `nn.utils.rnn.packed_padded_sequence`. This will cause our RNN to only process the non-padded elements of our sequence. The RNN will then return `packed_output` (a packed sequence) as well as the `hidden` and `cell` states (both of which are tensors). Without packed padded sequences, `hidden` and `cell` are tensors from the last element in the sequence, which will most probably be a pad token, however when using packed padded sequences they are both from the last non-padded element in the sequence. \n",
+    "\n",
+    "We then unpack the output sequence, with `nn.utils.rnn.pad_packed_sequence`, to transform it from a packed sequence to a tensor. The elements of `output` from padding tokens will be zero tensors (tensors where every element is zero). Usually, we only have to unpack output if we are going to use it later on in the model. Although we aren't in this case, we still unpack the sequence just to show how it is done.\n",
+    "\n",
     "The final hidden state, `hidden`, has a shape of _**[num layers * num directions, batch size, hid dim]**_. These are ordered: **[forward_layer_0, backward_layer_0, forward_layer_1, backward_layer 1, ..., forward_layer_n, backward_layer n]**. As we want the final (top) layer forward and backward hidden states, we get the top two hidden layers from the first dimension, `hidden[-2,:,:]` and `hidden[-1,:,:]`, and concatenate them together before passing them to the linear layer (after applying dropout). "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +239,7 @@
     "        \n",
     "        self.dropout = nn.Dropout(dropout)\n",
     "        \n",
-    "    def forward(self, text):\n",
+    "    def forward(self, text, text_lengths):\n",
     "        \n",
     "        #text = [sent len, batch size]\n",
     "        \n",
@@ -203,9 +247,17 @@
     "        \n",
     "        #embedded = [sent len, batch size, emb dim]\n",
     "        \n",
-    "        output, (hidden, cell) = self.rnn(embedded)\n",
+    "        #pack sequence\n",
+    "        packed_embedded = nn.utils.rnn.pack_padded_sequence(embedded, text_lengths)\n",
     "        \n",
+    "        packed_output, (hidden, cell) = self.rnn(packed_embedded)\n",
+    "        \n",
+    "        #unpack sequence\n",
+    "        output, output_lengths = nn.utils.rnn.pad_packed_sequence(packed_output)\n",
+    "\n",
     "        #output = [sent len, batch size, hid dim * num directions]\n",
+    "        #output over padding tokens are zero tensors\n",
+    "        \n",
     "        #hidden = [num layers * num directions, batch size, hid dim]\n",
     "        #cell = [num layers * num directions, batch size, hid dim]\n",
     "        \n",
@@ -232,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +388,7 @@
        "        [-0.1182, -0.4701, -0.0600,  ...,  0.7991, -0.0194,  0.4785]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,14 +520,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We define a function for training our model...\n",
+    "We define a function for training our model. \n",
+    "\n",
+    "As we have set `include_lengths = True`, our `batch.text` is now a tuple with the first element being the numericalized tensor and the second element being the actual lengths of each sequence. We separate these into their own variables, `text` and `text_lengths`, before passing them to the model.\n",
     "\n",
     "**Note**: as we are now using dropout, we must remember to use `model.train()` to ensure the dropout is \"turned on\" while training."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +544,9 @@
     "        \n",
     "        optimizer.zero_grad()\n",
     "        \n",
-    "        predictions = model(batch.text).squeeze(1)\n",
+    "        text, text_lengths = batch.text\n",
+    "        \n",
+    "        predictions = model(text, text_lengths).squeeze(1)\n",
     "        \n",
     "        loss = criterion(predictions, batch.label)\n",
     "        \n",
@@ -510,14 +566,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We define a function for testing our model...\n",
+    "Then we define a function for testing our model, again remembering to separate `batch.text`.\n",
     "\n",
     "**Note**: as we are now using dropout, we must remember to use `model.eval()` to ensure the dropout is \"turned off\" while evaluating."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +588,9 @@
     "    \n",
     "        for batch in iterator:\n",
     "\n",
-    "            predictions = model(batch.text).squeeze(1)\n",
+    "            text, text_lengths = batch.text\n",
+    "            \n",
+    "            predictions = model(text, text_lengths).squeeze(1)\n",
     "            \n",
     "            loss = criterion(predictions, batch.label)\n",
     "            \n",
@@ -553,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,33 +628,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we train our model, noticing how it now takes ~1min 45sec per epoch instead of 18 seconds... all of those extra parameters don't come for free!"
+    "Finally, we train our model..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01 | Epoch Time: 1m 39s\n",
-      "\tTrain Loss: 0.685 | Train Acc: 56.16%\n",
-      "\t Val. Loss: 0.685 |  Val. Acc: 50.81%\n",
-      "Epoch: 02 | Epoch Time: 1m 39s\n",
-      "\tTrain Loss: 0.678 | Train Acc: 55.33%\n",
-      "\t Val. Loss: 0.654 |  Val. Acc: 63.16%\n",
-      "Epoch: 03 | Epoch Time: 1m 38s\n",
-      "\tTrain Loss: 0.573 | Train Acc: 70.50%\n",
-      "\t Val. Loss: 0.434 |  Val. Acc: 80.82%\n",
-      "Epoch: 04 | Epoch Time: 1m 39s\n",
-      "\tTrain Loss: 0.439 | Train Acc: 80.81%\n",
-      "\t Val. Loss: 0.392 |  Val. Acc: 83.90%\n",
-      "Epoch: 05 | Epoch Time: 1m 41s\n",
-      "\tTrain Loss: 0.342 | Train Acc: 85.71%\n",
-      "\t Val. Loss: 0.529 |  Val. Acc: 71.46%\n"
+      "Epoch: 01 | Epoch Time: 0m 27s\n",
+      "\tTrain Loss: 0.630 | Train Acc: 63.51%\n",
+      "\t Val. Loss: 0.488 |  Val. Acc: 77.86%\n",
+      "Epoch: 02 | Epoch Time: 0m 28s\n",
+      "\tTrain Loss: 0.524 | Train Acc: 74.37%\n",
+      "\t Val. Loss: 0.552 |  Val. Acc: 71.96%\n",
+      "Epoch: 03 | Epoch Time: 0m 28s\n",
+      "\tTrain Loss: 0.504 | Train Acc: 75.70%\n",
+      "\t Val. Loss: 0.394 |  Val. Acc: 82.67%\n",
+      "Epoch: 04 | Epoch Time: 0m 27s\n",
+      "\tTrain Loss: 0.355 | Train Acc: 84.88%\n",
+      "\t Val. Loss: 0.362 |  Val. Acc: 84.94%\n",
+      "Epoch: 05 | Epoch Time: 0m 27s\n",
+      "\tTrain Loss: 0.315 | Train Acc: 87.19%\n",
+      "\t Val. Loss: 0.379 |  Val. Acc: 83.58%\n"
      ]
     }
    ],
@@ -634,14 +692,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.405 | Test Acc: 83.06%\n"
+      "Test Loss: 0.371 | Test Acc: 84.55%\n"
      ]
     }
    ],
@@ -664,8 +722,10 @@
     "Our `predict_sentiment` function does a few things:\n",
     "- tokenizes the sentence, i.e. splits it from a raw string into a list of tokens\n",
     "- indexes the tokens by converting them into their integer representation from our vocabulary\n",
+    "- gets the length of our sequence\n",
     "- converts the indexes, which are a Python list into a PyTorch tensor\n",
     "- add a batch dimension by `unsqueeze`ing \n",
+    "- converts the length into a tensor\n",
     "- squashes the output prediction from a real number between 0 and 1 with the `sigmoid` function\n",
     "- converts the tensor holding a single value into an integer with the `item()` method\n",
     "\n",
@@ -674,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,9 +744,11 @@
     "def predict_sentiment(sentence):\n",
     "    tokenized = [tok.text for tok in nlp.tokenizer(sentence)]\n",
     "    indexed = [TEXT.vocab.stoi[t] for t in tokenized]\n",
+    "    length = [len(indexed)]\n",
     "    tensor = torch.LongTensor(indexed).to(device)\n",
     "    tensor = tensor.unsqueeze(1)\n",
-    "    prediction = torch.sigmoid(model(tensor))\n",
+    "    length_tensor = torch.LongTensor(length)\n",
+    "    prediction = torch.sigmoid(model(tensor, length_tensor))\n",
     "    return prediction.item()"
    ]
   },
@@ -699,16 +761,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0363629013299942"
+       "0.035538237541913986"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,16 +788,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.98636394739151"
+       "0.9660999178886414"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +812,7 @@
    "source": [
     "## Next Steps\n",
     "\n",
-    "We've now built a decent sentiment analysis model for movie reviews. However, not all of the steps we have added were necessary to achieve the test accuracy we've achieved. In the next notebook we'll implement a model that gets comparable accuracy with far fewer parameters and trains much, much faster."
+    "We've now built a decent sentiment analysis model for movie reviews! In the next notebook we'll implement a model that gets comparable accuracy with far fewer parameters and trains much, much faster."
    ]
   }
  ],
