changed some wording due to rerunning notebook 2 with packed padded sequences

--- a/3 - Faster Sentiment Analysis.ipynb
+++ b/3 - Faster Sentiment Analysis.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 3 - Faster Sentiment Analysis\n",
     "\n",
-    "In the previous notebook we managed to achieve a decent test accuracy of ~85% using all of the common techniques used for sentiment analysis. In this notebook, we'll implement a model that gets comparable results whilst training significantly faster. More specifically, we'll be implementing the \"FastText\" model from the paper [Bag of Tricks for Efficient Text Classification](https://arxiv.org/abs/1607.01759)."
+    "In the previous notebook we managed to achieve a decent test accuracy of ~84% using all of the common techniques used for sentiment analysis. In this notebook, we'll implement a model that gets comparable results whilst training significantly faster and using around half of the parameters. More specifically, we'll be implementing the \"FastText\" model from the paper [Bag of Tricks for Efficient Text Classification](https://arxiv.org/abs/1607.01759)."
    ]
   },
   {
@@ -66,7 +66,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TorchText `Field`s have a `preprocessing` argument. A function passed here will be applied to a sentence after it has been tokenized (transformed from a string into a list of tokens), but before it has been numericalized (transformed from a list of tokens to a list of indexes). This is where we'll pass our `generate_bigrams` function."
+    "TorchText `Field`s have a `preprocessing` argument. A function passed here will be applied to a sentence after it has been tokenized (transformed from a string into a list of tokens), but before it has been numericalized (transformed from a list of tokens to a list of indexes). This is where we'll pass our `generate_bigrams` function.\n",
+    "\n",
+    "As we aren't using an RNN we can't use packed padded sequences, thus we do not need to set `include_lengths = True`."
    ]
   },
   {
