removed erroneous statement about the cnn model being the fastest model

--- a/4 - Convolutional Sentiment Analysis.ipynb
+++ b/4 - Convolutional Sentiment Analysis.ipynb
@@ -682,7 +682,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We get test results comparable to the previous 2 models, with the shortest training time yet!"
+    "We get test results comparable to the previous 2 models!"
    ]
   },
   {
