added model.eval() in predict sentiment functions (#31)

--- a/1 - Simple Sentiment Analysis.ipynb
+++ b/1 - Simple Sentiment Analysis.ipynb
@@ -58,7 +58,6 @@
     "SEED = 1234\n",
     "\n",
     "torch.manual_seed(SEED)\n",
-    "torch.cuda.manual_seed(SEED)\n",
     "torch.backends.cudnn.deterministic = True\n",
     "\n",
     "TEXT = data.Field(tokenize = 'spacy')\n",
@@ -312,7 +311,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<function _default_unk_index at 0x7f4234385bf8>, {'neg': 0, 'pos': 1})\n"
+      "defaultdict(<function _default_unk_index at 0x7f91ba0f8d08>, {'neg': 0, 'pos': 1})\n"
      ]
     }
    ],
@@ -713,7 +712,7 @@
       "Epoch: 01 | Epoch Time: 0m 18s\n",
       "\tTrain Loss: 0.694 | Train Acc: 50.12%\n",
       "\t Val. Loss: 0.696 |  Val. Acc: 50.17%\n",
-      "Epoch: 02 | Epoch Time: 0m 17s\n",
+      "Epoch: 02 | Epoch Time: 0m 19s\n",
       "\tTrain Loss: 0.693 | Train Acc: 49.73%\n",
       "\t Val. Loss: 0.696 |  Val. Acc: 51.01%\n",
       "Epoch: 03 | Epoch Time: 0m 17s\n",
