--- a/3 - Faster Sentiment Analysis.ipynb
+++ b/3 - Faster Sentiment Analysis.ipynb
@@ -50,7 +50,7 @@
     {
      "data": {
       "text/plain": [
-       "['This', 'film', 'is', 'terrible', 'film is', 'is terrible', 'This film']"
+       "['This', 'film', 'is', 'terrible', 'This film', 'film is', 'is terrible']"
       ]
      },
      "execution_count": 2,
@@ -84,7 +84,6 @@
     "SEED = 1234\n",
     "\n",
     "torch.manual_seed(SEED)\n",
-    "torch.cuda.manual_seed(SEED)\n",
     "torch.backends.cudnn.deterministic = True\n",
     "\n",
     "TEXT = data.Field(tokenize = 'spacy', preprocessing = generate_bigrams)\n",
@@ -500,9 +499,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we train our model. \n",
-    "\n",
-    "This model takes more epochs than the previous model, but the epochs take considerably less time, so our overall training time is still shorter."
+    "Finally, we train our model."
    ]
   },
   {
@@ -514,7 +511,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01 | Epoch Time: 0m 8s\n",
+      "Epoch: 01 | Epoch Time: 0m 7s\n",
       "\tTrain Loss: 0.687 | Train Acc: 57.26%\n",
       "\t Val. Loss: 0.639 |  Val. Acc: 71.30%\n",
       "Epoch: 02 | Epoch Time: 0m 7s\n",
@@ -528,27 +525,12 @@
       "\t Val. Loss: 0.400 |  Val. Acc: 83.41%\n",
       "Epoch: 05 | Epoch Time: 0m 7s\n",
       "\tTrain Loss: 0.437 | Train Acc: 86.86%\n",
-      "\t Val. Loss: 0.392 |  Val. Acc: 85.09%\n",
-      "Epoch: 06 | Epoch Time: 0m 7s\n",
-      "\tTrain Loss: 0.384 | Train Acc: 88.69%\n",
-      "\t Val. Loss: 0.400 |  Val. Acc: 85.84%\n",
-      "Epoch: 07 | Epoch Time: 0m 7s\n",
-      "\tTrain Loss: 0.345 | Train Acc: 89.80%\n",
-      "\t Val. Loss: 0.420 |  Val. Acc: 86.57%\n",
-      "Epoch: 08 | Epoch Time: 0m 7s\n",
-      "\tTrain Loss: 0.312 | Train Acc: 90.67%\n",
-      "\t Val. Loss: 0.437 |  Val. Acc: 87.21%\n",
-      "Epoch: 09 | Epoch Time: 0m 7s\n",
-      "\tTrain Loss: 0.286 | Train Acc: 91.39%\n",
-      "\t Val. Loss: 0.458 |  Val. Acc: 87.46%\n",
-      "Epoch: 10 | Epoch Time: 0m 7s\n",
-      "\tTrain Loss: 0.263 | Train Acc: 91.99%\n",
-      "\t Val. Loss: 0.474 |  Val. Acc: 87.90%\n"
+      "\t Val. Loss: 0.392 |  Val. Acc: 85.09%\n"
      ]
     }
    ],
    "source": [
-    "N_EPOCHS = 10\n",
+    "N_EPOCHS = 5\n",
     "\n",
     "best_valid_loss = float('inf')\n",
     "\n",
@@ -620,7 +602,8 @@
     "import spacy\n",
     "nlp = spacy.load('en')\n",
     "\n",
-    "def predict_sentiment(sentence):\n",
+    "def predict_sentiment(model, sentence):\n",
+    "    model.eval()\n",
     "    tokenized = generate_bigrams([tok.text for tok in nlp.tokenizer(sentence)])\n",
     "    indexed = [TEXT.vocab.stoi[t] for t in tokenized]\n",
     "    tensor = torch.LongTensor(indexed).to(device)\n",
@@ -644,7 +627,7 @@
     {
      "data": {
       "text/plain": [
-       "5.475818625200191e-07"
+       "5.475813509292493e-07"
       ]
      },
      "execution_count": 21,
@@ -653,7 +636,7 @@
     }
    ],
    "source": [
-    "predict_sentiment(\"This film is terrible\")"
+    "predict_sentiment(model, \"This film is terrible\")"
    ]
   },
   {
@@ -680,7 +663,7 @@
     }
    ],
    "source": [
-    "predict_sentiment(\"This film is great\")"
+    "predict_sentiment(model, \"This film is great\")"
    ]
   },
   {
