--- a/4 - Convolutional Sentiment Analysis.ipynb
+++ b/4 - Convolutional Sentiment Analysis.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "In the previous notebooks, we managed to achieve a test accuracy of ~85% using RNNs and an implementation of the [Bag of Tricks for Efficient Text Classification](https://arxiv.org/abs/1607.01759) model. In this notebook, we will be using a *convolutional neural network* (CNN) to conduct sentiment analysis, implementing the model from [Convolutional Neural Networks for Sentence Classification](https://arxiv.org/abs/1408.5882).\n",
     "\n",
-    "**Note**: I am not aiming to give a comprehensive introduction and explanation of CNNs. For a better and more in-depth explanation check out [here](https://ujjwalkarn.me/2016/08/11/intuitive-explanation-convnets/) and [here](https://cs231n.github.io/convolutional-networks/).\n",
+    "**Note**: This tutorial is not aiming to give a comprehensive introduction and explanation of CNNs. For a better and more in-depth explanation check out [here](https://ujjwalkarn.me/2016/08/11/intuitive-explanation-convnets/) and [here](https://cs231n.github.io/convolutional-networks/).\n",
     "\n",
     "Traditionally, CNNs are used to analyse images and are made up of one or more *convolutional* layers, followed by one or more linear layers. The convolutional layers use filters (also called *kernels* or *receptive fields*) which scan across an image and produce a processed version of the image. This processed version of the image can be fed into another convolutional layer or a linear layer. Each filter has a shape, e.g. a 3x3 filter covers a 3 pixel wide and 3 pixel high area of the image, and each element of the filter has a weight associated with it, the 3x3 filter would have 9 weights. In traditional image processing these weights were specified by hand by engineers, however the main advantage of the convolutional layers in neural networks is that these weights are learned via backpropagation. \n",
     "\n",
@@ -44,7 +44,6 @@
     "SEED = 1234\n",
     "\n",
     "torch.manual_seed(SEED)\n",
-    "torch.cuda.manual_seed(SEED)\n",
     "torch.backends.cudnn.deterministic = True\n",
     "\n",
     "TEXT = data.Field(tokenize = 'spacy')\n",
@@ -638,16 +637,16 @@
       "Epoch: 01 | Epoch Time: 0m 12s\n",
       "\tTrain Loss: 0.644 | Train Acc: 62.23%\n",
       "\t Val. Loss: 0.487 |  Val. Acc: 78.46%\n",
-      "Epoch: 02 | Epoch Time: 0m 11s\n",
+      "Epoch: 02 | Epoch Time: 0m 12s\n",
       "\tTrain Loss: 0.419 | Train Acc: 80.98%\n",
       "\t Val. Loss: 0.360 |  Val. Acc: 84.72%\n",
       "Epoch: 03 | Epoch Time: 0m 12s\n",
       "\tTrain Loss: 0.302 | Train Acc: 87.17%\n",
       "\t Val. Loss: 0.345 |  Val. Acc: 85.25%\n",
-      "Epoch: 04 | Epoch Time: 0m 11s\n",
+      "Epoch: 04 | Epoch Time: 0m 12s\n",
       "\tTrain Loss: 0.218 | Train Acc: 91.27%\n",
       "\t Val. Loss: 0.318 |  Val. Acc: 87.04%\n",
-      "Epoch: 05 | Epoch Time: 0m 11s\n",
+      "Epoch: 05 | Epoch Time: 0m 12s\n",
       "\tTrain Loss: 0.155 | Train Acc: 94.35%\n",
       "\t Val. Loss: 0.339 |  Val. Acc: 86.56%\n"
      ]
@@ -726,7 +725,8 @@
     "import spacy\n",
     "nlp = spacy.load('en')\n",
     "\n",
-    "def predict_sentiment(sentence, min_len = 5):\n",
+    "def predict_sentiment(model, sentence, min_len = 5):\n",
+    "    model.eval()\n",
     "    tokenized = [tok.text for tok in nlp.tokenizer(sentence)]\n",
     "    if len(tokenized) < min_len:\n",
     "        tokenized += ['<pad>'] * (min_len - len(tokenized))\n",
@@ -761,7 +761,7 @@
     }
    ],
    "source": [
-    "predict_sentiment(\"This film is terrible\")"
+    "predict_sentiment(model, \"This film is terrible\")"
    ]
   },
   {
@@ -788,7 +788,7 @@
     }
    ],
    "source": [
-    "predict_sentiment(\"This film is great\")"
+    "predict_sentiment(model, \"This film is great\")"
    ]
   }
  ],
