--- a/2 - Upgraded Sentiment Analysis.ipynb
+++ b/2 - Upgraded Sentiment Analysis.ipynb
@@ -41,11 +41,9 @@
     "from torchtext import data\n",
     "from torchtext import datasets\n",
     "\n",
-    "\n",
     "SEED = 1234\n",
     "\n",
     "torch.manual_seed(SEED)\n",
-    "torch.cuda.manual_seed(SEED)\n",
     "torch.backends.cudnn.deterministic = True\n",
     "\n",
     "TEXT = data.Field(tokenize = 'spacy', include_lengths = True)\n",
@@ -640,21 +638,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01 | Epoch Time: 0m 27s\n",
-      "\tTrain Loss: 0.630 | Train Acc: 63.51%\n",
-      "\t Val. Loss: 0.488 |  Val. Acc: 77.86%\n",
+      "Epoch: 01 | Epoch Time: 0m 28s\n",
+      "\tTrain Loss: 0.641 | Train Acc: 62.54%\n",
+      "\t Val. Loss: 0.520 |  Val. Acc: 74.92%\n",
       "Epoch: 02 | Epoch Time: 0m 28s\n",
-      "\tTrain Loss: 0.524 | Train Acc: 74.37%\n",
-      "\t Val. Loss: 0.552 |  Val. Acc: 71.96%\n",
-      "Epoch: 03 | Epoch Time: 0m 28s\n",
-      "\tTrain Loss: 0.504 | Train Acc: 75.70%\n",
-      "\t Val. Loss: 0.394 |  Val. Acc: 82.67%\n",
-      "Epoch: 04 | Epoch Time: 0m 27s\n",
-      "\tTrain Loss: 0.355 | Train Acc: 84.88%\n",
-      "\t Val. Loss: 0.362 |  Val. Acc: 84.94%\n",
+      "\tTrain Loss: 0.559 | Train Acc: 71.77%\n",
+      "\t Val. Loss: 0.735 |  Val. Acc: 62.60%\n",
+      "Epoch: 03 | Epoch Time: 0m 27s\n",
+      "\tTrain Loss: 0.479 | Train Acc: 78.00%\n",
+      "\t Val. Loss: 0.403 |  Val. Acc: 82.23%\n",
+      "Epoch: 04 | Epoch Time: 0m 28s\n",
+      "\tTrain Loss: 0.381 | Train Acc: 83.92%\n",
+      "\t Val. Loss: 0.343 |  Val. Acc: 85.85%\n",
       "Epoch: 05 | Epoch Time: 0m 27s\n",
-      "\tTrain Loss: 0.315 | Train Acc: 87.19%\n",
-      "\t Val. Loss: 0.379 |  Val. Acc: 83.58%\n"
+      "\tTrain Loss: 0.319 | Train Acc: 86.83%\n",
+      "\t Val. Loss: 0.360 |  Val. Acc: 85.59%\n"
      ]
     }
    ],
@@ -699,7 +697,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.371 | Test Acc: 84.55%\n"
+      "Test Loss: 0.342 | Test Acc: 86.02%\n"
      ]
     }
    ],
@@ -719,7 +717,10 @@
     "\n",
     "We can now use our model to predict the sentiment of any sentence we give it. As it has been trained on movie reviews, the sentences provided should also be movie reviews.\n",
     "\n",
+    "When using a model for inference it should always be in evaluation mode. If this tutorial is followed step-by-step then it should already be in evaluation mode (from doing `evaluate` on the test set), however we explicitly set it to avoid any risk.\n",
+    "\n",
     "Our `predict_sentiment` function does a few things:\n",
+    "- sets the model to evaluation mode\n",
     "- tokenizes the sentence, i.e. splits it from a raw string into a list of tokens\n",
     "- indexes the tokens by converting them into their integer representation from our vocabulary\n",
     "- gets the length of our sequence\n",
@@ -741,7 +742,8 @@
     "import spacy\n",
     "nlp = spacy.load('en')\n",
     "\n",
-    "def predict_sentiment(sentence):\n",
+    "def predict_sentiment(model, sentence):\n",
+    "    model.eval()\n",
     "    tokenized = [tok.text for tok in nlp.tokenizer(sentence)]\n",
     "    indexed = [TEXT.vocab.stoi[t] for t in tokenized]\n",
     "    length = [len(indexed)]\n",
@@ -767,7 +769,7 @@
     {
      "data": {
       "text/plain": [
-       "0.035538237541913986"
+       "0.019431069493293762"
       ]
      },
      "execution_count": 21,
@@ -776,7 +778,7 @@
     }
    ],
    "source": [
-    "predict_sentiment(\"This film is terrible\")"
+    "predict_sentiment(model, \"This film is terrible\")"
    ]
   },
   {
@@ -794,7 +796,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9660999178886414"
+       "0.9544845819473267"
       ]
      },
      "execution_count": 22,
@@ -803,7 +805,7 @@
     }
    ],
    "source": [
-    "predict_sentiment(\"This film is great\")"
+    "predict_sentiment(model, \"This film is great\")"
    ]
   },
   {
