--- a/5 - Multi-class Sentiment Analysis.ipynb
+++ b/5 - Multi-class Sentiment Analysis.ipynb
@@ -31,7 +31,6 @@
     "SEED = 1234\n",
     "\n",
     "torch.manual_seed(SEED)\n",
-    "torch.cuda.manual_seed(SEED)\n",
     "torch.backends.cudnn.deterministic = True\n",
     "\n",
     "TEXT = data.Field(tokenize = 'spacy')\n",
@@ -116,7 +115,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<function _default_unk_index at 0x7f41cc314bf8>, {'HUM': 0, 'ENTY': 1, 'DESC': 2, 'NUM': 3, 'LOC': 4, 'ABBR': 5})\n"
+      "defaultdict(<function _default_unk_index at 0x7f0a50190d08>, {'HUM': 0, 'ENTY': 1, 'DESC': 2, 'NUM': 3, 'LOC': 4, 'ABBR': 5})\n"
      ]
     }
    ],
@@ -573,7 +572,8 @@
     "import spacy\n",
     "nlp = spacy.load('en')\n",
     "\n",
-    "def predict_class(sentence, min_len = 4):\n",
+    "def predict_class(model, sentence, min_len = 4):\n",
+    "    model.eval()\n",
     "    tokenized = [tok.text for tok in nlp.tokenizer(sentence)]\n",
     "    if len(tokenized) < min_len:\n",
     "        tokenized += ['<pad>'] * (min_len - len(tokenized))\n",
@@ -606,7 +606,7 @@
     }
    ],
    "source": [
-    "pred_class = predict_class(\"Who is Keyser Söze?\")\n",
+    "pred_class = predict_class(model, \"Who is Keyser Söze?\")\n",
     "print(f'Predicted class is: {pred_class} = {LABEL.vocab.itos[pred_class]}')"
    ]
   },
@@ -624,7 +624,7 @@
     }
    ],
    "source": [
-    "pred_class = predict_class(\"How many minutes are in six hundred and eighteen hours?\")\n",
+    "pred_class = predict_class(model, \"How many minutes are in six hundred and eighteen hours?\")\n",
     "print(f'Predicted class is: {pred_class} = {LABEL.vocab.itos[pred_class]}')"
    ]
   },
@@ -642,7 +642,7 @@
     }
    ],
    "source": [
-    "pred_class = predict_class(\"What continent is Bulgaria in?\")\n",
+    "pred_class = predict_class(model, \"What continent is Bulgaria in?\")\n",
     "print(f'Predicted class is: {pred_class} = {LABEL.vocab.itos[pred_class]}')"
    ]
   },
@@ -660,7 +660,7 @@
     }
    ],
    "source": [
-    "pred_class = predict_class(\"What does WYSIWYG stand for?\")\n",
+    "pred_class = predict_class(model, \"What does WYSIWYG stand for?\")\n",
     "print(f'Predicted class is: {pred_class} = {LABEL.vocab.itos[pred_class]}')"
    ]
   }
